# KDE-Windows-Modern

./: .gitattributes  .gitignore  .gitmodules  ATTRIBUTION.md  AUTHORS  README.md  add.txt  install.sh  progress-tier2.md  progress.md  startmenu-loop-prompt.md  startmenu-progress.md  uninstall.sh  verify-all.sh
Kvantum/Windows-modern/: Windows-modern.kvconfig
Kvantum/Windows-modern-dark/: Windows-modern-dark.kvconfig
Kvantum/Windows-modern-light/: Windows-modern-light.kvconfig
Kvantum/Windows-modern-lightDark/: Windows-modern-lightDark.kvconfig
app-decorations/firefox/: README.md  userChrome.css
aurorae/Windows Modern Dark Aurorae/: metadata.desktop  metadata.json
aurorae/Windows-modern-2/: metadata.desktop
aurorae/Windows-modern-dark/: metadata.desktop  metadata.json  windows-modern-auroraerc
aurorae/Windows-modern-dark-Sharp/: metadata.desktop
aurorae/Windows-modern-light/: metadata.desktop
aurorae/Windows-modern-light-Sharp/: metadata.desktop
aurorae/windows-modern-aurorae/: metadata.desktop
aurorae/windows-modern-dark-aurorae/: metadata.desktop  metadata.json  windows-modern-dark-auroraerc
aurorae/windows-modern-light-aurorae/: metadata.desktop  metadata.json  windows-modern-light-auroraerc
color-schemes/: Windows-modernDark.colors  Windows-modernLight.colors  WindowsModernDark.colors
docs/: PLASMA_SYSTEMTRAY_ARCHITECTURE.md  RELEASE.md  SECURITY_AUDIT.md  STARTMENU_PLAN.md  STYLE.md  SYSTEMTRAY_ANALYSIS.md  SYSTEMTRAY_ARCHITECTURE.md  SYSTEMTRAY_DECISION.md  SYSTEMTRAY_GAP_ANALYSIS.md
docs/icon-pack/: 00-architecture.md  00-inventory.md  01-source-packs.md  02-freedesktop-spec.md  03-icon-groups.md  04-ai-prepass.md  05-light-dark-strategy.md  06-fallback-order.md  07-selection-progress.md  08-quality-pass.md  09-context-verification.md  README.md
icons/windows-modern/: CREDITS  index.theme
plasma/applets/org.kde.windowsmodern.digitalclock/: metadata.json
plasma/applets/org.kde.windowsmodern.icontasks/: BUILD.md  CMakeLists.txt  dev.sh  floatingtooltiparea.cpp  floatingtooltiparea.h  floatingtooltipdialog.cpp  floatingtooltipdialog.h  metadata.json
plasma/applets/org.kde.windowsmodern.icontasks/contents/config/: main.xml
plasma/applets/org.kde.windowsmodern.icontasks/contents/ui/: ConfigAppearance.qml  ConfigBehavior.qml  ContextMenu.qml  GroupDialog.qml  MouseHandler.qml  Task.qml  TaskBadgeOverlay.qml  TaskList.qml  TaskProgressOverlay.qml  ToolTipDelegate.qml  ToolTipInstance.qml  main.qml
plasma/applets/org.kde.windowsmodern.icontasks/contents/ui/code/: LayoutMetrics.js
plasma/applets/org.kde.windowsmodern.quicksettings/: metadata.json
plasma/applets/org.kde.windowsmodern.showdesktop/: metadata.json
plasma/applets/org.kde.windowsmodern.startmenu/: dev.sh  metadata.json
plasma/applets/org.kde.windowsmodern.systemtray/: BUILD.md  CMakeLists.txt  dbusmenuimporter.cpp  dbusmenuimporter.h  dbusserviceobserver.cpp  dbusserviceobserver.h  debug.cpp  debug.h  dev.sh  install.sh  metadata.json  org.freedesktop.DBus.Properties.xml  plasmoidregistry.cpp  plasmoidregistry.h  sortedsystemtraymodel.cpp  sortedsystemtraymodel.h  statusnotifieritemhost.cpp  statusnotifieritemhost.h  statusnotifieritemsource.cpp  systemtray.cpp  systemtray.h  systemtraymodel.cpp  systemtraymodel.h  systemtraysettings.cpp  systemtraysettings.h  systemtraytypedefs.h  systemtraytypes.cpp  systemtraytypes.h  verify.sh
plasma/applets/org.kde.windowsmodern.systemtray/contents/config/: main.xml
plasma/applets/org.kde.windowsmodern.systemtray/contents/ui/: AbstractItem.qml  ActionPanel.qml  ConfigGeneral.qml  ExpandedRepresentation.qml  FlyoutRouter.qml  HiddenItemsView.qml  PlasmoidPopupsContainer.qml  main.qml
plasma/applets/org.kde.windowsmodern.systemtray/contents/ui/components/: AirplaneToggle.qml  BluetoothPage.qml  BluetoothToggle.qml  BrightnessPage.qml  BrightnessSlider.qml  CastInvertToggle.qml  ClipboardPage.qml  DeviceNotifierPage.qml  Footer.qml  InhibitSleepToggle.qml  MediaControllerPage.qml  NetworkToggle.qml  NotificationsPage.qml  PowerButton.qml  PowerProfilePage.qml  TouchpadToggle.qml  VolumeSlider.qml
plasma/applets/org.kde.windowsmodern.systemtray/contents/ui/components/volume/: VolumeMixerSection.qml  VolumeModels.qml
plasma/applets/org.kde.windowsmodern.systemtray/contents/ui/js/: funcs.js
plasma/applets/org.kde.windowsmodern.systemtray/contents/ui/lib/: FooterButton.qml  Page.qml  PageHeader.qml  Slider.qml  SplitTile.qml  Tile.qml
plasma/desktoptheme/Windows-modern-dark/: colors  metadata.desktop  metadata.json
plasma/desktoptheme/Windows-modern-light/: colors  metadata.desktop  metadata.json
plasma/layout-templates/org.kde.windowsmodern.panel/: metadata.json
plasma/look-and-feel/com.github.yeyushengfan258.Windows-modern-dark/: metadata.desktop  metadata.json
plasma/look-and-feel/com.github.yeyushengfan258.Windows-modern-light/: metadata.desktop  metadata.json
plasma/look-and-feel/org.kde.windowsmodern.dark/: BUILD.md  metadata.desktop  metadata.json
plasma/look-and-feel/org.kde.windowsmodern.light/: metadata.desktop  metadata.json
plasma/shells/org.kde.windowsmodern.lockscreen/: metadata.json
scripts/: capture-screenshots.sh  commit-icons.sh  install-digitalclock.sh  install-greeter-live.sh  install-greeter.sh  install-icons.sh  install-icontasks.sh  install-layout.sh  install-lib.sh  install-lookfeel.sh  install-quickset.sh  install-sessionlock.sh  install-showdesk.sh  install-startmenu.sh  install-systray.sh  install-themes.sh  package.sh  release.sh  set-wallpaper.sh  uninstall-greeter-system.sh  update-plm.sh  update-previews.sh
sddm-dark/: README.md  install.sh
sddm-dark/Windows-modern-dark/: Main.qml  metadata.desktop
sddm-dark/Windows-modern-dark/assets/: login  restart_primary  shutdown_primary  suspend_primary  switch_primary
sddm-light/: README.md  install.sh
sddm-light/Windows-modern-light/: Main.qml  metadata.desktop
wallpaper/Windows-modern/: metadata.json
wallpaper/Windows-modern-dark/: metadata.desktop  metadata.json
wallpaper/Windows-modern-light/: metadata.desktop
(+228 files in other folders)
